--- a/Style.css
+++ b/Style.css
@@ -6,7 +6,7 @@ body{ margin: 0; background: white; }
 header {
   background: black;
   text-align: center;
-  position: fixed;
+  position: 0;
   z-index: 999;
   width: 100%;
 }
@@ -18,6 +18,7 @@ nav {
   right: 0;
   background:linear-gradient(black, #676565);
   width: 100%;
+  justify-content: space-between;
   transform: scale(1,0);
   transform-origin: top;
   transition: transform 400ms ease-in-out;
@@ -53,7 +54,10 @@ nav a:hover {
  transform: scale(1,1) ;
 }
 .nav-toggle{
-  display: none;
+  
+  position: absolute !important;
+  top: -9999px !important;
+  left: -9999px !important;
 }
 
 .nav-toggle-label{
@@ -217,10 +221,4 @@ footer{ background-color: silver;   vertical-align: center;list-style: none;}
   nav li a{
    text-decoration: none;  color: white; font-size: 12; color: white; display: inline-block; padding: 10px;}
   }
-
-  .Images img{ margin: 40px;
-    height: 500px;
-    width: 1040px;
-    background: aliceblue;
-    border-radius: 52px;}
   }   
