--- a/Style.css
+++ b/Style.css
@@ -119,13 +119,14 @@ nav a:hover {
 /* ------------------------------------------------------------------ */
 
 /* Index.HTML CSS */
+.index-main{ padding-top: 10%; padding-bottom: 10%; }
 .container{width: 100%; 
   padding-left: 8%;
   padding-right: 8%;
   overflow: hidden;
   box-sizing: border-box; 
   display: flex;
-  padding-top: 10%; }
+  padding-bottom: 10%; }
 
 .Right{ 
        width: 50%;
@@ -177,8 +178,9 @@ h1{  font-family: cursive; }
 .left img{ max-height: 250px;
      padding: 0px;
      padding-top: 1%;
-     padding-left: 50%;
+     padding-left: 3%;
      padding-bottom: 30%;
+     
       }
 .left img:hover{
 	transform: scale(1.5,1.5);
@@ -460,7 +462,7 @@ h1{  font-family: cursive; }
   width: 50%;
   height: 500px;
 }
-.left img{ max-width: 100%;
+.left img{ max-width: 100%; padding-top: 57%;
 }
 .left img:hover{
   transform: scale(1.5,1.5);
@@ -500,6 +502,7 @@ margin-top: 100px; padding-left: 60px; padding-bottom: 50px; border-style: doubl
   flex-direction: column;}
 .logo{ max-width: 50%;  }
 
+
 .Right{ 
        max-width: 100%;
      }
@@ -510,7 +513,7 @@ h1{  font-family: cursive; padding-top: 7%; }
   width: 50%;
   height: 500px;
 }
-.left img{ width: 100%; max-height: 100%;
+.left img{ width: 100%; max-height: 100%; padding-top: 150%; padding-left: 60%;
 }
 .left img:hover{
   transform: scale(1.2,1.2);
